updates paths to build file

--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     plan: free
     repo: https://github.com/abbiehuynh/my-crochet-corner
     buildCommand: cd client && npm install && npm run build && cd ../server && npm install
-    startCommand: cd server && nodemon server.js
+    startCommand: cd server && node server.js
     envVars:
       - key: DATABASE_URI
         fromDatabase:
