installs openai and sets up endpoint for openai api

--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "openai": "^4.69.0",
     "pg": "^8.13.0"
   },
   "name": "my-crochet-corner",
