--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^2.7.0",
     "openai": "^4.69.0",
     "pg": "^8.13.0"
   },
@@ -22,6 +23,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@babel/preset-env": "^7.26.0",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "supertest": "^7.0.0"
